Fix color contrast accesibility on regular filters

--- a/scss/core/helpers/resources/all-filters.scss
+++ b/scss/core/helpers/resources/all-filters.scss
@@ -107,7 +107,7 @@
 									span{
 										font-size: 12/16*1rem;
 										font-family: $opensans;
-										color: $gris-intermedio;
+										color: #333;
 									}
 								}
 
