--- a/scss/core/helpers/resources/breadcrumbs.scss
+++ b/scss/core/helpers/resources/breadcrumbs.scss
@@ -4,14 +4,29 @@
 
 .#{$prefijo}gwr{
 	&.#{$prefijo}gwr-breadcrumb{
-		width: 100% !important;
-		background-color: #ececec;
+		background-color: #f4f4f4;
+		position: relative;
 		max-width: 100% !important;
+		width: 100% !important;
+
+		&::before {
+			content: "";
+			display: block;
+			width: 100%;
+			position: absolute;
+			left: 0;
+			top: 100%;
+			height: 1px;
+			background-color: #f4f4f4;
+			z-index: 2;
+		}
+
 		.#{$prefijo}flex-breadcrumb{
 			max-width: 1431px;
 			margin-left: auto;
 			margin-right: auto;
 		}
+
 	}
 }
 
@@ -60,7 +75,8 @@
 			}
 
 			a{
-				color: #0072AC;
+				color: #0f4aac;
+				font-weight: 600;
 			}
 		}
 	}
