--- a/scss/core/helpers/resources/filters.scss
+++ b/scss/core/helpers/resources/filters.scss
@@ -418,9 +418,9 @@
 						z-index: 3;
 						overflow: hidden;
 						text-indent: -999999px;
-						background-color: transparent;
+						background-color: #fff;
 						display: block;
-						color: transparent;
+						color: #333;
 						opacity: 0;
 						option{
 							color: #333;
